--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   http: "^0.11.3+16"
   firebase_auth:
   google_sign_in:
+  firebase_database:
 
 dev_dependencies:
   flutter_test:
