--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,8 @@ dependencies:
   http: "^0.11.3+16"
   firebase_auth:
   google_sign_in:
-  firebase_database:
+  firebase_database: ^0.4.1
+  firebase_core: any
 
 dev_dependencies:
   flutter_test:
