--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   google_sign_in:
   firebase_database: ^0.4.1
   firebase_core: any
+  cloud_firestore:
+  flutter_staggered_grid_view:
 
 dev_dependencies:
   flutter_test:
@@ -31,8 +33,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
+  assets:
+   - images/mechanics.jpg
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
