Card and Container layout Created

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_core: any
   cloud_firestore:
   flutter_staggered_grid_view:
+  firebase_storage:
 
 dev_dependencies:
   flutter_test:
@@ -34,8 +35,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - images/mechanics.jpg
-  #  - images/a_dot_ham.jpeg
+   - assets/Images/mechanics.jpg
+   - assets/Images/car.jpg
+   - assets/Images/forest.jpg
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
